log
Thu Apr 21 15:38:39 UTC 2022: 
 tests:  1|8
total_score: 0/70
b55dd62
Thu Apr 21 15:43:05 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:33: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                 ^~~~~~~
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e89c4ca
Thu Apr 21 15:43:28 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeNode’:
treemap.c:30:41: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                         ^~~~~~~
treemap.c:30:49: error: expected expression before ‘TreeNode’
     TreeNode * new = (TreeNode *)malloc(size_of(TreeNode));
                                                 ^~~~~~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:41:41: error: expected expression before ‘TreeMap’
   TreeMap* map=(TreeMap*)malloc(size_of(TreeMap));
                                         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f222d65
Thu Apr 21 15:43:40 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
6263907
Thu Apr 21 15:44:37 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a4c7273
Thu Apr 21 15:51:23 UTC 2022: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: ‘Tree’ undeclared (first use in this function); did you mean ‘tree’?
   TreeNode aux=Tree->root
                ^~~~
                tree
treemap.c:75:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:3: error: expected ‘,’ or ‘;’ before ‘while’
   while(aux!=NULL){
   ^~~~~
treemap.c:75:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   TreeNode aux=Tree->root
            ^~~
cc1: all warnings being treated as errors
Compilation failed
028d9cf
